force-app/main/default/objects/PersonExamination/PersonExamination.object-meta.xml
<CustomObject>
    <sharingModel>Private</sharingModel>
</CustomObject>