force-app/main/default/objects/PersonExamination/fields/Exam_Slot__c.field-meta.xml
<CustomField>
    <fullName>Exam_Slot__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Exam Slot</label>
    <referenceTo>Exam_Slot__c</referenceTo>
    <relationshipLabel>Person Examinations</relationshipLabel>
    <relationshipName>Person_Examinations</relationshipName>
    <type>Lookup</type>
</CustomField>