force-app/main/default/objects/PersonExamination/fields/Passing_Program_Score__c.field-meta.xml
<CustomField>
    <fullName>Passing_Program_Score__c</fullName>
    <formula>Examination.Passing_Program_Score__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Passing Program Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>