force-app/main/default/objects/PersonExamination/fields/Schedule_Date__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Date__c</fullName>
    <formula>Exam_Slot__r.Schedule_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Schedule Date</label>
    <type>Date</type>
</CustomField>