force-app/main/default/objects/PersonExamination/fields/Schedule_Time__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Time__c</fullName>
    <formula>Exam_Slot__r.Start_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Schedule Time</label>
    <type>Time</type>
</CustomField>